enable proxy configuration
Signed-off-by: Byron.Collins <Byron.Collins@datacom.co.nz>

--- a/manifests/azure-agent-configmap.yaml
+++ b/manifests/azure-agent-configmap.yaml
@@ -13,11 +13,19 @@ parameters:
   name: AZP_POOL
   required: true
   value: ""
+- description: PROXY URL
+  name: PROXY_URL
+  value: ""
+- description: PROXY Username
+  name: PROXY_USERNAME
+  value: ""
 objects:
 - apiVersion: v1
   data:
     AZP_URL: ${AZP_URL}
     AZP_POOL: ${AZP_POOL}
+    PROXY_URL: ${PROXY_URL}
+    PROXY_USERNAME: ${PROXY_USERNAME}
   kind: ConfigMap
   metadata:
     name: azure-agent
