--- a/manifests/azure-agent-secret.yaml
+++ b/manifests/azure-agent-secret.yaml
@@ -9,11 +9,15 @@ parameters:
 - description: Azure DevOps Agent PAT
   name: AZP_TOKEN
   required: true
+- description: PROXY Password
+  name: PROXY_PASSWORD
+  value: ""
 objects:  
 - apiVersion: v1
   stringData:
     AZP_TOKEN: ${AZP_TOKEN}
+    PROXY_PASSWORD: ${PROXY_PASSWORD}
   kind: Secret
   metadata:
-    name: azure-agent-token
+    name: azure-agent
   type: Opaque
