--- a/.github/workflows/github-build.yaml
+++ b/.github/workflows/github-build.yaml
@@ -13,3 +13,4 @@ jobs:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
         repository: byroncollins/azure-devops-agent
+        tags: latest
