--- a/.github/workflows/github-build.yaml
+++ b/.github/workflows/github-build.yaml
@@ -6,11 +6,15 @@ jobs:
     steps:
     - name: checkout code
       uses: actions/checkout@v2
-      
-    - name: Build and push Docker images
-      uses: docker/build-push-action@v1
+
+    - name: Login to Docker Hub
+      uses: docker/login-action@v2
       with:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
-        repository: byroncollins/azure-devops-agent
-        tags: latest
+      
+    - name: Build and push Docker images
+      uses: docker/build-push-action@v2
+      with:
+        push: true
+        tags: byroncollins/azure-devops-agent:latest
