--- a/manifests/azure-agent-deployment.yaml
+++ b/manifests/azure-agent-deployment.yaml
@@ -85,6 +85,12 @@ objects:
             limits: 
               cpu: ${CPU_LIMIT}
               memory: ${MEMORY_LIMIT}
+          livenessProbe:
+            exec:
+              command:
+              - /azp/health.sh
+            initialDelaySeconds: 30
+            periodSeconds: 30
           terminationMessagePath: /dev/termination-log
           terminationMessagePolicy: File
         dnsPolicy: ClusterFirst
